--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
